TransactionController and test