@@ -11,17 +11,16 @@ import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.data.jpa.test.autoconfigure.DataJpaTest;
-import org.springframework.boot.test.context.TestConfiguration;
 import org.springframework.context.annotation.ComponentScan;
-import org.springframework.context.annotation.Import;
 
 import java.math.BigDecimal;
-import java.util.Collections;
+import java.util.List;
 import java.util.Set;
 import java.util.UUID;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
+import static org.junit.jupiter.api.Assertions.fail;
 
 @DataJpaTest
 @ComponentScan(basePackages = {"astoppello.wallet.service.impl", "astoppello.wallet.mapper"})
@@ -56,13 +55,15 @@ public class TransactionServiceImplIt {
                 .description("any")
                 .merchant("any")
                 .amount(BigDecimal.TEN)
+                .category(categoryDto.getId())
+                .labels(Set.of(labelDto.getId()))
                 .build();
     }
 
 
     @Test
     void save() {
-        TransactionDto saved = service.save(accountDto.getId(), categoryDto.getId(), Set.of(labelDto.getId()), transactionDto);
+        TransactionDto saved = service.save(accountDto.getId(), transactionDto);
 
         assertThat(saved.getId()).isNotNull();
         assertThat(saved.getAccount()).isEqualTo(accountDto.getId());
@@ -79,26 +80,38 @@ public class TransactionServiceImplIt {
     }
 
     @Test
-    void save_accountCategoryLabelNotFound() {
-        assertThatThrownBy(() -> service.save(UUID.randomUUID(), categoryDto.getId(), null, transactionDto))
+    void save_accountNotFound() {
+        assertThatThrownBy(() -> service.save(UUID.randomUUID(), transactionDto))
                 .isInstanceOf(NotFoundException.class);
+    }
 
-        assertThatThrownBy(() -> service.save(accountDto.getId(), UUID.randomUUID(), null, transactionDto))
+    @Test
+    void save_categoryNotFound() {
+        transactionDto.setCategory(UUID.randomUUID());
+        assertThatThrownBy(() -> service.save(accountDto.getId(), transactionDto))
                 .isInstanceOf(NotFoundException.class);
+    }
 
-        TransactionDto save = service.save(accountDto.getId(), categoryDto.getId(), Collections.singleton(UUID.randomUUID()), transactionDto);
-        assertThat(save.getLabels()).isEmpty();
+    @Test
+    void save_labelNotFound(){
+        transactionDto.setLabels(Set.of(UUID.randomUUID()));
+        try {
+            TransactionDto save = service.save(accountDto.getId(), transactionDto);
+            assertThat(save.getLabels()).isEmpty();
+        } catch (RuntimeException e) {
+            fail();
+        }
     }
 
     @Test
     void getAll() {
-        TransactionDto saved = service.save(accountDto.getId(), categoryDto.getId(), Set.of(labelDto.getId()), transactionDto);
+        service.save(accountDto.getId(), transactionDto);
         assertThat(service.getAll()).hasSize(1);
     }
 
     @Test
     void getByID() {
-        TransactionDto saved = service.save(accountDto.getId(), categoryDto.getId(), Set.of(labelDto.getId()), transactionDto);
+        TransactionDto saved = service.save(accountDto.getId(), transactionDto);
         assertThat(service.getByID(saved.getId())).isEqualTo(saved);
     }
 
@@ -109,10 +122,10 @@ public class TransactionServiceImplIt {
 
     @Test
     void update_amount() {
-        TransactionDto saved = service.save(accountDto.getId(), categoryDto.getId(), Set.of(labelDto.getId()), transactionDto);
+        TransactionDto saved = service.save(accountDto.getId(), transactionDto);
         TransactionDto newDto = TransactionDto.builder().amount(new BigDecimal("100.00")).build();
 
-        TransactionDto update = service.update(saved.getId(), null, null, null, newDto);
+        TransactionDto update = service.update(saved.getId(), newDto);
         assertThat(update.getAmount()).isEqualTo(newDto.getAmount());
         assertThat(update.getTrackingDate()).isNotNull();
         assertThat(update.getTrackingDate().getUpdatedAt()).isAfter(update.getTrackingDate().getCreatedAt());
@@ -120,11 +133,13 @@ public class TransactionServiceImplIt {
 
     @Test
     void update_accountAndCategory() {
-        TransactionDto saved = service.save(accountDto.getId(), categoryDto.getId(), Set.of(labelDto.getId()), transactionDto);
+        TransactionDto saved = service.save(accountDto.getId(), transactionDto);
         CategoryDto newCategory = categoryService.save(CategoryDto.builder().name("newCategory").type(CategoryType.EXPENSE).build());
         AccountDto newAccount = accountService.save(institutionDto.getId(), AccountDto.builder().currency(Currency.EUR).accountType(AccountTypeEnum.LIQUIDITY).name("name").build());
 
-        TransactionDto updated = service.update(saved.getId(), newAccount.getId(), newCategory.getId(), null, transactionDto);
+        transactionDto.setAccount(newAccount.getId());
+        transactionDto.setCategory(newCategory.getId());
+        TransactionDto updated = service.update(saved.getId(), transactionDto);
         assertThat(updated.getId()).isEqualTo(saved.getId());
         assertThat(updated.getCategory()).isEqualTo(newCategory.getId());
         assertThat(updated.getAccount()).isEqualTo(newAccount.getId());
@@ -132,8 +147,23 @@ public class TransactionServiceImplIt {
 
     @Test
     void delete() {
-        TransactionDto save = service.save(accountDto.getId(), categoryDto.getId(), null, transactionDto);
+        TransactionDto save = service.save(accountDto.getId(), transactionDto);
         service.delete(save.getId());
         assertThat(service.getAll()).hasSize(0);
     }
+
+    @Test
+    void getAllByAccount() {
+        assertThat(service.getAll()).hasSize(0);
+        TransactionDto saved = service.save(accountDto.getId(), transactionDto);
+        List<TransactionDto> allByAccount = service.getAllByAccount(accountDto.getId());
+        assertThat(allByAccount).hasSize(1);
+        assertThat(allByAccount.getFirst().getId()).isEqualTo(saved.getId());
+    }
+
+    @Test
+    void getAllByAccount_notFound() {
+        assertThatThrownBy(() -> service.getAllByAccount(UUID.randomUUID())).isInstanceOf(NotFoundException.class);
+    }
+
 }
